--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,10 @@
     "comma-dangle": ["error", "never"],
     "object-curly-newline": "off",
     "react/prop-types": "off",
-    "react/jsx-props-no-spreading": "off"
+    "react/jsx-props-no-spreading": "off",
+    "import/prefer-default-export": "off",
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": ["error"]
   },
   "settings": {
     "import/resolver": {
